ya termine a mimir

--- a/index.html
+++ b/index.html
@@ -45,17 +45,20 @@
       <div class="firstbox">
         <h2 class="title">Productos</h2>
         <p class="info">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, culpa.
-          Hic ab sed itaque magnam facere dolore aliquam reprehenderit nisi.
-          Tenetur sit consequuntur adipisci qui iusto laborum modi voluptatum
-          explicabo!
+            Descubre la magia de la personalización con Visual Crafts. 
+            Desde playeras y sudaderas hasta termos grabados a láser, 
+            letreros LED y mucho más, cada producto es una obra maestra 
+            única. Convierte tus ideas en realidad y deja una impresión 
+            duradera con nuestros volantes, tarjetas de presentación y más. 
+            ¡Explora nuestra colección de productos personalizados y haz 
+            que tu marca destaque con estilo y originalidad!
         </p>
 
         <div class="box-container">
           <div class="box">
             <h3>Sellos</h3>
             <img src="sellos.jpg" height="100" alt="sellos" />
-            <p>labore molestias consectetur venias</p>
+            <p>Agiliza tus tiempos</p>
           </div>
           <div class="box">
             <h3>Letreros neon</h3>
@@ -65,27 +68,27 @@
               class="lampara"
               alt="lamparas"
             />
-            <p>labore molestias consectetur venias</p>
+            <p>Decora tu espacio</p>
           </div>
           <div class="box">
             <h3>Sudaderas</h3>
             <img src="sudaderas.jpg" height="100" alt="sudaderas" />
-            <p>labore molestias consectetur venias</p>
+            <p>Abrigate con estilo</p>
           </div>
           <div class="box">
             <h3>Playeras</h3>
             <img src="playeras.jpg" height="100" alt="playeras" />
-            <p>labore molestias consectetur venias</p>
+            <p>crea tu propia moda</p>
           </div>
           <div class="box">
             <h3>Termos</h3>
             <img src="termos.jpg" height="100" alt="termos" />
-            <p>labore molestias consectetur venias</p>
+            <p>Hidratate</p>
           </div>
           <div class="box">
             <h3>Volantes</h3>
             <img src="volantes.jpeg" height="100" alt="termos" />
-            <p>labore molestias consectetur venias</p>
+            <p>crea un identidad visual</p>
           </div>
         </div>
       </div>
@@ -93,8 +96,18 @@
 
     <section class="about" id="nosotros">
       <h2 class="titulos">Nosotros</h2>
-      <p class="info">que pedo con este</p>
-
+      <p class="info">
+        Misión:
+        Crear productos personalizados de alta calidad que reflejen
+         la singularidad de cada cliente, inspirando a través de la 
+         creatividad y la originalidad.</p>
+        <p>
+        Visión:
+        Ser líderes en la industria de productos personalizados, 
+        destacando por nuestra calidad, innovación y crecimiento 
+        continuo tanto a nivel nacional como internacional.
+        </p>
+        
       <button><a href="a" class="btn">Saber mas</a></button>
     </section>
 
@@ -102,16 +115,12 @@
       <article class="contain">
         <h2 class="titulos">precio</h2>
         <p class="info">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate
-          odit ad, sed perferendis consectetur dolor. Alias, temporibus. Placeat
-          officiis quaerat magni, dolores odio quasi ea at aperiam, totam,
-          soluta pariatur. Lorem ipsum dolor sit amet consectetur adipisicing
-          elit. Debitis Lorem, ipsum dolor sit amet consectetur adipisicing
-          elit. Provident repellendus deleniti vero eos assumenda eum temporibus
-          laudantium quo ad sequi eligendi corporis, quaerat culpa aliquid
-          aperiam iusto? Odio, eveniet necessitatibus.repellendus libero non
-          quas odit a ducimus asperiores neque accusamus eaque. Consequatur
-          magnam, omnis id minus voluptate quaerat placeat nam eaque.
+            En Visual Crafts, nos enorgullece ofrecer productos personalizados 
+            de alta calidad a precios moderados y asequibles. Creemos que todos 
+            deberían tener acceso a artículos únicos y duraderos que reflejen 
+            su estilo personal, sin comprometer la calidad. Por ello, nos esforzamos 
+            por mantener nuestros precios accesibles para satisfacer las necesidades 
+            y expectativas de nuestros clientes.
         </p>
       </article>
       <button><a href="a" class="btn">Saber mas</a></button>
